# tubesync

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.otlp.yml  docker-compose.yml
deploy/kube/: app.yml  db.yml  namespace.yml  rabbit.yml
tubesync/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  settings.py
tubesync/db/: create_schema.py
tubesync/db/dao/: channel_dao.py
tubesync/db/models/: channel.py
tubesync/services/: __init__.py
tubesync/services/redis/: lifetime.py
tubesync/tests/: __init__.py  test_dummy.py
tubesync/web/: __init__.py  application.py  lifetime.py
tubesync/web/api/: __init__.py  router.py
tubesync/web/api/channel/: __init__.py  schema.py  views.py
tubesync/web/api/dummy/: __init__.py  schema.py  views.py
tubesync/web/api/echo/: __init__.py  views.py
tubesync/web/api/monitoring/: __init__.py
tubesync/web/api/redis/: __init__.py  views.py
